lib/parser/SimpleCv3Parser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 SimpleCv3.g 2014-06-06 08:57:38

var SimpleCv3Parser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    SimpleCv3Parser.superclass.constructor.call(this, input, state);

    this.dfa2 = new SimpleCv3Parser.DFA2(this);
    this.dfa24 = new SimpleCv3Parser.DFA24(this);
    this.dfa26 = new SimpleCv3Parser.DFA26(this);
    this.dfa37 = new SimpleCv3Parser.DFA37(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(SimpleCv3Parser, {
    EOF: -1,
    T__15: 15,
    T__16: 16,
    T__17: 17,
    T__18: 18,
    T__19: 19,
    T__20: 20,
    T__21: 21,
    T__22: 22,
    T__23: 23,
    T__24: 24,
    T__25: 25,
    T__26: 26,
    T__27: 27,
    T__28: 28,
    T__29: 29,
    T__30: 30,
    T__31: 31,
    T__32: 32,
    T__33: 33,
    T__34: 34,
    T__35: 35,
    T__36: 36,
    T__37: 37,
    T__38: 38,
    T__39: 39,
    T__40: 40,
    T__41: 41,
    T__42: 42,
    T__43: 43,
    T__44: 44,
    T__45: 45,
    T__46: 46,
    T__47: 47,
    T__48: 48,
    T__49: 49,
    T__50: 50,
    T__51: 51,
    T__52: 52,
    T__53: 53,
    T__54: 54,
    T__55: 55,
    T__56: 56,
    T__57: 57,
    T__58: 58,
    T__59: 59,
    T__60: 60,
    T__61: 61,
    T__62: 62,
    T__63: 63,
    T__64: 64,
    T__65: 65,
    T__66: 66,
    T__67: 67,
    T__68: 68,
    T__69: 69,
    T__70: 70,
    T__71: 71,
    T__72: 72,
    T__73: 73,
    T__74: 74,
    T__75: 75,
    T__76: 76,
    T__77: 77,
    ID: 4,
    INT: 5,
    STRING: 6,
    EXPONENT: 7,
    FLOAT: 8,
    WS: 9,
    CHINESECHAR: 10,
    MULTILINE_COMMENT: 11,
    SINGLELINE_COMMENT: 12,
    EscapeSequence: 13,
    OctalEscape: 14
});

(function(){
// public class variables
var EOF= -1,
    T__15= 15,
    T__16= 16,
    T__17= 17,
    T__18= 18,
    T__19= 19,
    T__20= 20,
    T__21= 21,
    T__22= 22,
    T__23= 23,
    T__24= 24,
    T__25= 25,
    T__26= 26,
    T__27= 27,
    T__28= 28,
    T__29= 29,
    T__30= 30,
    T__31= 31,
    T__32= 32,
    T__33= 33,
    T__34= 34,
    T__35= 35,
    T__36= 36,
    T__37= 37,
    T__38= 38,
    T__39= 39,
    T__40= 40,
    T__41= 41,
    T__42= 42,
    T__43= 43,
    T__44= 44,
    T__45= 45,
    T__46= 46,
    T__47= 47,
    T__48= 48,
    T__49= 49,
    T__50= 50,
    T__51= 51,
    T__52= 52,
    T__53= 53,
    T__54= 54,
    T__55= 55,
    T__56= 56,
    T__57= 57,
    T__58= 58,
    T__59= 59,
    T__60= 60,
    T__61= 61,
    T__62= 62,
    T__63= 63,
    T__64= 64,
    T__65= 65,
    T__66= 66,
    T__67= 67,
    T__68= 68,
    T__69= 69,
    T__70= 70,
    T__71= 71,
    T__72= 72,
    T__73= 73,
    T__74= 74,
    T__75= 75,
    T__76= 76,
    T__77= 77,
    ID= 4,
    INT= 5,
    STRING= 6,
    EXPONENT= 7,
    FLOAT= 8,
    WS= 9,
    CHINESECHAR= 10,
    MULTILINE_COMMENT= 11,
    SINGLELINE_COMMENT= 12,
    EscapeSequence= 13,
    OctalEscape= 14;

// public instance methods/vars
org.antlr.lang.extend(SimpleCv3Parser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return SimpleCv3Parser.tokenNames; },
    getGrammarFileName: function() { return "SimpleCv3.g"; }
});
org.antlr.lang.augmentObject(SimpleCv3Parser.prototype, {

    // inline static return class
    program_return: (function() {
        SimpleCv3Parser.program_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.program_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:11:1: program : ( statement )+ ;
    // $ANTLR start "program"
    program: function() {
        var retval = new SimpleCv3Parser.program_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var statement1 = null;


        try {
            // SimpleCv3.g:12:5: ( ( statement )+ )
            // SimpleCv3.g:12:9: ( statement )+
            root_0 = this.adaptor.nil();

            // SimpleCv3.g:12:9: ( statement )+
            var cnt1=0;
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==ID||LA1_0==16||(LA1_0>=23 && LA1_0<=33)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // SimpleCv3.g:0:0: statement
                    this.pushFollow(SimpleCv3Parser.FOLLOW_statement_in_program68);
                    statement1=this.statement();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, statement1.getTree());


                    break;

                default :
                    if ( cnt1 >= 1 ) {
                        break loop1;
                    }
                    if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                        var eee = new org.antlr.runtime.EarlyExitException(1, this.input);
                        throw eee;
                }
                cnt1++;
            } while (true);




            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    statement_return: (function() {
        SimpleCv3Parser.statement_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.statement_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:15:1: statement : ( declaration | variable | structDefinition | typeDefinition | functionHeader ';' | functionHeader block );
    // $ANTLR start "statement"
    statement: function() {
        var retval = new SimpleCv3Parser.statement_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal7 = null;
         var declaration2 = null;
         var variable3 = null;
         var structDefinition4 = null;
         var typeDefinition5 = null;
         var functionHeader6 = null;
         var functionHeader8 = null;
         var block9 = null;

        var char_literal7_tree=null;

        try {
            // SimpleCv3.g:16:5: ( declaration | variable | structDefinition | typeDefinition | functionHeader ';' | functionHeader block )
            var alt2=6;
            alt2 = this.dfa2.predict(this.input);
            switch (alt2) {
                case 1 :
                    // SimpleCv3.g:16:9: declaration
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv3Parser.FOLLOW_declaration_in_statement88);
                    declaration2=this.declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, declaration2.getTree());


                    break;
                case 2 :
                    // SimpleCv3.g:17:9: variable
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv3Parser.FOLLOW_variable_in_statement98);
                    variable3=this.variable();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, variable3.getTree());


                    break;
                case 3 :
                    // SimpleCv3.g:18:9: structDefinition
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv3Parser.FOLLOW_structDefinition_in_statement108);
                    structDefinition4=this.structDefinition();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, structDefinition4.getTree());


                    break;
                case 4 :
                    // SimpleCv3.g:19:9: typeDefinition
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv3Parser.FOLLOW_typeDefinition_in_statement118);
                    typeDefinition5=this.typeDefinition();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, typeDefinition5.getTree());


                    break;
                case 5 :
                    // SimpleCv3.g:20:9: functionHeader ';'
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv3Parser.FOLLOW_functionHeader_in_statement128);
                    functionHeader6=this.functionHeader();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, functionHeader6.getTree());
                    char_literal7=this.match(this.input,15,SimpleCv3Parser.FOLLOW_15_in_statement130); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    char_literal7_tree = this.adaptor.create(char_literal7);
                    this.adaptor.addChild(root_0, char_literal7_tree);
                    }


                    break;
                case 6 :
                    // SimpleCv3.g:21:9: functionHeader block
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv3Parser.FOLLOW_functionHeader_in_statement140);
                    functionHeader8=this.functionHeader();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, functionHeader8.getTree());
                    this.pushFollow(SimpleCv3Parser.FOLLOW_block_in_statement142);
                    block9=this.block();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, block9.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    declaration_return: (function() {
        SimpleCv3Parser.declaration_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.declaration_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:24:1: declaration : '#' 'include' '<' libname '>' ;
    // $ANTLR start "declaration"
    declaration: function() {
        var retval = new SimpleCv3Parser.declaration_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal10 = null;
        var string_literal11 = null;
        var char_literal12 = null;
        var char_literal14 = null;
         var libname13 = null;

        var char_literal10_tree=null;
        var string_literal11_tree=null;
        var char_literal12_tree=null;
        var char_literal14_tree=null;

        try {
            // SimpleCv3.g:25:5: ( '#' 'include' '<' libname '>' )
            // SimpleCv3.g:25:9: '#' 'include' '<' libname '>'
            root_0 = this.adaptor.nil();

            char_literal10=this.match(this.input,16,SimpleCv3Parser.FOLLOW_16_in_declaration161); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            char_literal10_tree = this.adaptor.create(char_literal10);
            this.adaptor.addChild(root_0, char_literal10_tree);
            }
            string_literal11=this.match(this.input,17,SimpleCv3Parser.FOLLOW_17_in_declaration163); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            string_literal11_tree = this.adaptor.create(string_literal11);
            this.adaptor.addChild(root_0, string_literal11_tree);
            }
            char_literal12=this.match(this.input,18,SimpleCv3Parser.FOLLOW_18_in_declaration165); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            char_literal12_tree = this.adaptor.create(char_literal12);
            this.adaptor.addChild(root_0, char_literal12_tree);
            }
            this.pushFollow(SimpleCv3Parser.FOLLOW_libname_in_declaration167);
            libname13=this.libname();

            this.state._fsp--;
            if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, libname13.getTree());
            char_literal14=this.match(this.input,19,SimpleCv3Parser.FOLLOW_19_in_declaration169); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            char_literal14_tree = this.adaptor.create(char_literal14);
            this.adaptor.addChild(root_0, char_literal14_tree);
            }



            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    libname_return: (function() {
        SimpleCv3Parser.libname_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.libname_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:28:1: libname : ID ( '.' ID )? ;
    // $ANTLR start "libname"
    libname: function() {
        var retval = new SimpleCv3Parser.libname_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var ID15 = null;
        var char_literal16 = null;
        var ID17 = null;

        var ID15_tree=null;
        var char_literal16_tree=null;
        var ID17_tree=null;

        try {
            // SimpleCv3.g:29:5: ( ID ( '.' ID )? )
            // SimpleCv3.g:29:9: ID ( '.' ID )?
            root_0 = this.adaptor.nil();

            ID15=this.match(this.input,ID,SimpleCv3Parser.FOLLOW_ID_in_libname188); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            ID15_tree = this.adaptor.create(ID15);
            this.adaptor.addChild(root_0, ID15_tree);
            }
            // SimpleCv3.g:29:12: ( '.' ID )?
            var alt3=2;
            var LA3_0 = this.input.LA(1);

            if ( (LA3_0==20) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // SimpleCv3.g:29:13: '.' ID
                    char_literal16=this.match(this.input,20,SimpleCv3Parser.FOLLOW_20_in_libname191); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    char_literal16_tree = this.adaptor.create(char_literal16);
                    this.adaptor.addChild(root_0, char_literal16_tree);
                    }
                    ID17=this.match(this.input,ID,SimpleCv3Parser.FOLLOW_ID_in_libname193); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    ID17_tree = this.adaptor.create(ID17);
                    this.adaptor.addChild(root_0, ID17_tree);
                    }


                    break;

            }




            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    variable_return: (function() {
        SimpleCv3Parser.variable_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.variable_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:32:1: variable : type declarator ( assignmentOp conditionalExpr )? ( ',' declarator ( assignmentOp conditionalExpr )? )* ';' ;
    // $ANTLR start "variable"
    variable: function() {
        var retval = new SimpleCv3Parser.variable_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal22 = null;
        var char_literal26 = null;
         var type18 = null;
         var declarator19 = null;
         var assignmentOp20 = null;
         var conditionalExpr21 = null;
         var declarator23 = null;
         var assignmentOp24 = null;
         var conditionalExpr25 = null;

        var char_literal22_tree=null;
        var char_literal26_tree=null;

        try {
            // SimpleCv3.g:33:5: ( type declarator ( assignmentOp conditionalExpr )? ( ',' declarator ( assignmentOp conditionalExpr )? )* ';' )
            // SimpleCv3.g:33:9: type declarator ( assignmentOp conditionalExpr )? ( ',' declarator ( assignmentOp conditionalExpr )? )* ';'
            root_0 = this.adaptor.nil();

            this.pushFollow(SimpleCv3Parser.FOLLOW_type_in_variable214);
            type18=this.type();

            this.state._fsp--;
            if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, type18.getTree());
            this.pushFollow(SimpleCv3Parser.FOLLOW_declarator_in_variable216);
            declarator19=this.declarator();

            this.state._fsp--;
            if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, declarator19.getTree());
            // SimpleCv3.g:33:25: ( assignmentOp conditionalExpr )?
            var alt4=2;
            var LA4_0 = this.input.LA(1);

            if ( ((LA4_0>=46 && LA4_0<=55)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // SimpleCv3.g:33:26: assignmentOp conditionalExpr
                    this.pushFollow(SimpleCv3Parser.FOLLOW_assignmentOp_in_variable219);
                    assignmentOp20=this.assignmentOp();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, assignmentOp20.getTree());
                    this.pushFollow(SimpleCv3Parser.FOLLOW_conditionalExpr_in_variable221);
                    conditionalExpr21=this.conditionalExpr();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, conditionalExpr21.getTree());


                    break;

            }

            // SimpleCv3.g:33:57: ( ',' declarator ( assignmentOp conditionalExpr )? )*
            loop6:
            do {
                var alt6=2;
                var LA6_0 = this.input.LA(1);

                if ( (LA6_0==21) ) {
                    alt6=1;
                }


                switch (alt6) {
                case 1 :
                    // SimpleCv3.g:33:58: ',' declarator ( assignmentOp conditionalExpr )?
                    char_literal22=this.match(this.input,21,SimpleCv3Parser.FOLLOW_21_in_variable226); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    char_literal22_tree = this.adaptor.create(char_literal22);
                    this.adaptor.addChild(root_0, char_literal22_tree);
                    }
                    this.pushFollow(SimpleCv3Parser.FOLLOW_declarator_in_variable228);
                    declarator23=this.declarator();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, declarator23.getTree());
                    // SimpleCv3.g:33:73: ( assignmentOp conditionalExpr )?
                    var alt5=2;
                    var LA5_0 = this.input.LA(1);

                    if ( ((LA5_0>=46 && LA5_0<=55)) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // SimpleCv3.g:33:74: assignmentOp conditionalExpr
                            this.pushFollow(SimpleCv3Parser.FOLLOW_assignmentOp_in_variable231);
                            assignmentOp24=this.assignmentOp();

                            this.state._fsp--;
                            if (this.state.failed) return retval;
                            if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, assignmentOp24.getTree());
                            this.pushFollow(SimpleCv3Parser.FOLLOW_conditionalExpr_in_variable233);
                            conditionalExpr25=this.conditionalExpr();

                            this.state._fsp--;
                            if (this.state.failed) return retval;
                            if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, conditionalExpr25.getTree());


                            break;

                    }



                    break;

                default :
                    break loop6;
                }
            } while (true);

            char_literal26=this.match(this.input,15,SimpleCv3Parser.FOLLOW_15_in_variable239); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            char_literal26_tree = this.adaptor.create(char_literal26);
            this.adaptor.addChild(root_0, char_literal26_tree);
            }



            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    type_return: (function() {
        SimpleCv3Parser.type_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.type_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:36:1: type : typeSpecifier ( '*' )? ;
    // $ANTLR start "type"
    type: function() {
        var retval = new SimpleCv3Parser.type_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal28 = null;
         var typeSpecifier27 = null;

        var char_literal28_tree=null;

        try {
            // SimpleCv3.g:37:5: ( typeSpecifier ( '*' )? )
            // SimpleCv3.g:37:9: typeSpecifier ( '*' )?
            root_0 = this.adaptor.nil();

            this.pushFollow(SimpleCv3Parser.FOLLOW_typeSpecifier_in_type258);
            typeSpecifier27=this.typeSpecifier();

            this.state._fsp--;
            if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, typeSpecifier27.getTree());
            // SimpleCv3.g:37:23: ( '*' )?
            var alt7=2;
            var LA7_0 = this.input.LA(1);

            if ( (LA7_0==22) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // SimpleCv3.g:0:0: '*'
                    char_literal28=this.match(this.input,22,SimpleCv3Parser.FOLLOW_22_in_type260); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    char_literal28_tree = this.adaptor.create(char_literal28);
                    this.adaptor.addChild(root_0, char_literal28_tree);
                    }


                    break;

            }




            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    typeSpecifier_return: (function() {
        SimpleCv3Parser.typeSpecifier_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.typeSpecifier_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:40:1: typeSpecifier : ( 'void' | 'char' | 'short' | 'int' | 'long' | 'float' | 'double' | 'signed' | 'unsigned' | ID );
    // $ANTLR start "typeSpecifier"
    typeSpecifier: function() {
        var retval = new SimpleCv3Parser.typeSpecifier_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var set29 = null;

        var set29_tree=null;

        try {
            // SimpleCv3.g:41:2: ( 'void' | 'char' | 'short' | 'int' | 'long' | 'float' | 'double' | 'signed' | 'unsigned' | ID )
            // SimpleCv3.g:
            root_0 = this.adaptor.nil();

            set29=this.input.LT(1);
            if ( this.input.LA(1)==ID||(this.input.LA(1)>=23 && this.input.LA(1)<=31) ) {
                this.input.consume();
                if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, this.adaptor.create(set29));
                this.state.errorRecovery=false;this.state.failed=false;
            }
            else {
                if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                var mse = new org.antlr.runtime.MismatchedSetException(null,this.input);
                throw mse;
            }




            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    declarator_return: (function() {
        SimpleCv3Parser.declarator_return = function(){};
        org.antlr.lang.extend(SimpleCv3Parser.declarator_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv3.g:53:1: declarator : ID ;
    // $ANTLR start "declarator"
    declarator: function() {
        var retval = new SimpleCv3Parser.declarator_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var ID30 = null;

        var ID30_tree=null;

        try {
            // SimpleCv3.g:54:5: ( ID )
            // SimpleCv3.g:54:9: ID
            root_0 = this.adaptor.nil();

            ID30=this.match(this.input,ID,SimpleCv3Parser.FOLLOW_ID_in_declarator347); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            ID30_tree = this.adaptor.create(ID30);
            this.adaptor.addChild(root_0, ID30_tree);
            }



            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
